Fix CI #9